--- a/index.html
+++ b/index.html
@@ -1,14 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<html>
-  <head>
-  <link rel="stylesheet" href="/styles.css">
-  </head>
-
-  <body>
-    <h1>Discover hidden places in the world around you!</h1>
-    <p>Download Excursion (Coming Soon!)</p>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Excursion</title>
+    <link rel="stylesheet" href="resources\css\style.css">
+</head>
+<body style="background-color: black">
+    <h1>Discover hidden places in the world around you</h1>
+    <a id="link" href="https://2b41b97c39af40d1bb1d4241104ed775.cc-propeller.cloud/#"> Download Excursion (Coming Soon!)</a>
   
-  </body>
+    <video id=video autoplay>
+        <source src="resources\excursion.mp4" type="video/mp4"></src>
+    </video>
+
+    <h2>Your personal travel guide</h2>
+    <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+
+    <img id=landscape src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg">
+    <img id=phone src="https://content.codecademy.com/programs/freelance-one/excursion/images/phone.png">
+    <h2>Coming Soon for iPhone and Android</h2>
+    <a id="link" href="https://2b41b97c39af40d1bb1d4241104ed775.cc-propeller.cloud/#"> Download Excursion (Coming Soon!)</a>
+
+    <h4>© Excursion</h4>
+</body>
 </html>
